--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+    <string name="back">Back</string>
 </resources>
