--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="update">Update</string>
     <string name="delete">Delete</string>
     <string name="back">Back</string>
+    <string name="sign_in">Sign in</string>
 </resources>
